[package]
name = "veckit"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib"]

[features]
default = []
ui = []

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
strip = true
debug = "line-tables-only"

[profile.dev]
panic = "abort"
# split-debuginfo = "packed"


[dependencies]
paper2_tracing = { git = "https://github.com/Fernthedev/paperlog.git", package = "paper2_tracing" }
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = [
    "il2cpp_v31",
], branch = "cordl-fixes" }
# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust", tag = "v4200.0.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }

# https://github.com/Hpmason/retour-rs/issues/69
[patch.crates-io]
retour = { git = "https://github.com/workingjubilee/hpmason-retour-rs.git", branch = "fix-retour-for-unsupported-fn-ptr-calling-conventions" }

# [patch."https://github.com/Fernthedev/quest-hook-rs.git"]
# quest_hook = { path = "../quest-hook-rs" }

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
quest_build_helper = { git = "https://github.com/Fernthedev/quest-hook-rs.git", branch = "cordl-fixes", package = "quest_build_helper" }
